<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="30dp"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/tvTitle"
        android:text="@string/mission"
        android:textSize="40sp"
        android:textStyle="bold"
        android:fontFamily="@font/mpr1c_extrabold"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btnPrevPet"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/previous_pet"
            />

        <ImageView
            android:id="@+id/imgPet"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:padding="20dp"
            android:src="@drawable/ic_pet_level1" />

        <ImageButton
            android:id="@+id/btnNextPet"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_next"
            android:contentDescription="@string/next_pet"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >


        <TextView
            android:id="@+id/tvPetName"
            android:text="@string/pet_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/mpr1c_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            />

        <ImageButton
            android:id="@+id/button_edit"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/edit_pet_name"
            android:src="@drawable/ic_edit"
            android:padding="5dp"
            android:backgroundTint="@color/white"
            />
        <EditText
            android:id="@+id/edit_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="Enter new name"
            android:visibility="gone"
            android:layout_marginTop="8dp"/>
        <Button
            android:id="@+id/buttonApplyEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Apply"
            android:visibility="gone"
            android:layout_marginTop="8dp"/>
    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressGrowth"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:progress="0"
        android:max="10"
         />

    <TextView
        android:id="@+id/tvGrowthPoint"
        android:text="@string/a_1_10"
        android:textColor="@color/black"
        android:fontFamily="@font/mpr1c_medium"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:background="@android:color/white"
        android:layout_width="330dp"
        android:layout_height="330dp"
        android:elevation="4dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:backgroundTint="#FFFFFF"
        android:layout_margin="8dp"
        android:paddingTop="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imgCheck1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:src="@drawable/ic_check"
                app:tint="@color/gray" />


            <TextView
                android:id="@+id/btnTask1"
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mpr1c_medium"
                android:paddingHorizontal="15dp"
                android:text="@string/complete_3_tasks_n_1_growth_point"
                android:textColor="@color/black"

                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="5dp"
            >

            <ImageView
                android:id="@+id/imgCheck2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_check"
                android:gravity="center"
                android:tintMode="src_in"
                app:tint="@color/gray" />


            <TextView
                android:id="@+id/btnTask2"
                android:text="@string/complete_3_pomodoro_sessions_n_3_growth_points"
                android:fontFamily="@font/mpr1c_medium"
                android:layout_marginBottom="8dp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:paddingHorizontal="15dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="5dp"
            >

            <ImageView
                android:id="@+id/imgCheck3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_check"
                android:gravity="center"
                android:tintMode="src_in"
                app:tint="@color/gray" />


            <TextView
                android:id="@+id/btnTask3"
                android:text="@string/complete_all_tasks_for_the_day_n_3_growth_points"
                android:fontFamily="@font/mpr1c_medium"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:paddingHorizontal="15dp"
                />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
