<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/streak_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="30dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/streak_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/streak"
        android:textColor="@color/black"
        android:fontFamily="@font/mpr1c_extrabold"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"

        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonNextFragment"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_pet_mission"
                android:background="@drawable/background"
                android:contentDescription="change fragment mission" />

        </LinearLayout>
        <ImageView
            android:id="@+id/fire_icon"
            android:layout_width="175dp"
            android:layout_height="175dp"

            android:src="@drawable/ic_fire_color"
            android:contentDescription="@string/fire_icon" />

        <TextView
            android:id="@+id/streak_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_0"
            android:textColor="@color/black"
            android:fontFamily="@font/mpr1c_extrabold"
            android:textSize="32sp"
            android:textStyle="bold"
            android:paddingTop="8dp" />

        <TextView
            android:id="@+id/streak_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_streak"
            android:textColor="@color/black"
            android:fontFamily="@font/mpr1c_bold"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!-- Calendar View -->
        <com.kizitonwose.calendar.view.CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cv_dayViewResource="@layout/calendar_day"
            app:cv_monthHeaderResource="@layout/calendar_month_header" />
    </LinearLayout>




</LinearLayout>
